; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_platform_tests.c_lt_wait_for_lock_test_threads.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_platform_tests.c_lt_wait_for_lock_test_threads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lt_done_threads = common dso_local global i64 0, align 8
@lt_target_done_threads = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @lt_wait_for_lock_test_threads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lt_wait_for_lock_test_threads() #0 {
  %1 = call i32 (...) @OSMemoryBarrier()
  br label %2

2:                                                ; preds = %6, %0
  %3 = load i64, i64* @lt_done_threads, align 8
  %4 = load i64, i64* @lt_target_done_threads, align 8
  %5 = icmp slt i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %2
  %7 = call i32 (...) @lt_sleep_a_little_bit()
  %8 = call i32 (...) @OSMemoryBarrier()
  br label %2

9:                                                ; preds = %2
  %10 = call i32 (...) @OSMemoryBarrier()
  ret void
}

declare dso_local i32 @OSMemoryBarrier(...) #1

declare dso_local i32 @lt_sleep_a_little_bit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
